--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "classnames": "^2.3.2",
+    "moment": "^2.29.4",
     "normalize.css": "^8.0.1",
     "notistack": "^3.0.1",
     "react": "^18.2.0",
