--- a/package.json
+++ b/package.json
@@ -13,13 +13,17 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "base-64": "^1.0.0",
     "classnames": "^2.3.2",
+    "dompurify": "^3.0.2",
+    "jspdf": "^2.5.1",
     "moment": "^2.29.4",
     "normalize.css": "^8.0.1",
     "notistack": "^3.0.1",
     "react": "^18.2.0",
     "react-ckeditor-component": "^1.1.0",
     "react-dom": "^18.2.0",
+    "react-pdf": "^6.2.2",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
     "tinymce": "^6.4.2",
